--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
 - # skip
 
 script:
-- go get -t -v ./...
+- go mod download
 - diff -u <(echo -n) <(gofmt -d .)
 - go vet $(go list ./... | grep -v /vendor/)
 - go test -v -race ./...
