--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,13 @@ before_install:
 install:
 - # skip
 
+env:
+- GO111MODULE=on
+
 script:
-- GO111MODULE=on go mod download
+- go mod download
 - go vet $(go list ./... | grep -v /vendor/)
-- env GO111MODULE=on go test -v -race ./...
+- go test -v -race ./...
 # Only build binaries from the latest Go release.
 - if [ "${LATEST}" = "true" ]; then gox -os="windows linux" -output="travis_{{.OS}}_{{.Arch}}" -ldflags "-X main.Rev=`git rev-parse --short HEAD`" -verbose ./...; fi
 
