go module adaptation?

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,15 +17,12 @@ before_install:
 install:
 - # skip
 
-env:
-- GO111MODULE=on
-
 script:
-- go mod download
-- go vet $(go list ./... | grep -v /vendor/)
-- go test -v -race ./...
+- GO111MODULE=ongo mod download
+- GO111MODULE=ongo vet $(go list ./... | grep -v /vendor/)
+- GO111MODULE=ongo test -v -race ./...
 # Only build binaries from the latest Go release.
-- if [ "${LATEST}" = "true" ]; then gox -os="windows linux" -output="travis_{{.OS}}_{{.Arch}}" -ldflags "-X main.Rev=`git rev-parse --short HEAD`" -verbose ./...; fi
+- if [ "${LATEST}" = "true" ]; then GO111MODULE=on gox -os="windows linux" -output="travis_{{.OS}}_{{.Arch}}" -ldflags "-X main.Rev=`git rev-parse --short HEAD`" -verbose ./...; fi
 
 deploy:
   provider: releases
